--- a/thesis/paper/sections/6_discussion.tex
+++ b/thesis/paper/sections/6_discussion.tex
@@ -68,13 +68,13 @@ Intertext platform comes with some limitations arises from its nature. While the
 
 \begin{enumerate}
 
-    \item \textbf{Complex front-end Features}: Intertext applications can only transfer IUIDL to Intertext clients, and feature-wise, they are limited with what Intertext clients and IUIDL offer can offer. Therefor, it is not possible to build custom/complex feature-rich front-end applications.
+    \item \textbf{Complex front-end Features}: Intertext applications can only transfer IUIDL to Intertext clients, and feature-wise, they are limited with what Intertext clients and IUIDL offer can offer. Therefore, it is not possible to build custom/complex feature-rich front-end applications.
 
     \item \textbf{Offline Support}: Intertext clients are like web browsers, they make a request to an endpoint, and render the IUIDL code they receive. As a result, Intertext does not offer offline support out of the box. However, it is possible to work around this by creating a locally running IUIDL server that serves the application through a local endpoint, and pointing the Intertext client to it.
     
     \item \textbf{Design and Branding}: Intertext stands as a user-centric platform that gives end users full control of the look-and-feel of applications. IUIDL is designed as a style-agnostic language with this approach in mind. As a result, it is not possible for developers to implement their own branding and/or style system. It is however possible to add their logos or any other visuals.
     
-    \item \textbf{Custom Domains and Standalone Applications}: Intertext applications has to live within Intertext clients. Intertext clients can be thought of like a web browser, and Intertext applications like websites. In a similar sense, Intertext applications needs an Intertext client to be rendered. For the Intertext web client, apps has to be rendered under the domain that the Intertext web client hosted at. For instance, if \textit{example.com} were to be rendered at an Intertext client under \textit{intertext.com}, the domain would look something like \textit{intertext.com/?site=example.com}. For mobile platforms, Intertext applications can live under a native Intertext client. And for desktop platforms, Intertext clients can live under a native Intertext Desktop applications. Therefor, Intertext applications cannot be served under their own top-level domain, and they cannot be standalone applications. It should be noted that all these problems can be resolved. For the web, a custom chromium-based browser could be built with an Intertext client built-in to it. And as in the previous example, when users visits \textit{example.com} it would detect IUIDL code received by the web server and it would render it through the built-in Intertext client. For mobile and desktop platforms, custom operating systems can be built (possibly based on Android for mobile, and based on Linux for desktop) with an Intertext client built into it, which can support Intertext applications natively without the need for a wrapper application. Intertext support can also be built in to existing browsers and operating systems as well.
+    \item \textbf{Custom Domains and Standalone Applications}: Intertext applications has to live within Intertext clients. Intertext clients can be thought of like a web browser, and Intertext applications like websites. In a similar sense, Intertext applications needs an Intertext client to be rendered. For the Intertext web client, apps has to be rendered under the domain that the Intertext web client hosted at. For instance, if \textit{example.com} were to be rendered at an Intertext client under \textit{intertext.com}, the domain would look something like \textit{intertext.com/?site=example.com}. For mobile platforms, Intertext applications can live under a native Intertext client. And for desktop platforms, Intertext clients can live under a native Intertext Desktop applications. Therefore, Intertext applications cannot be served under their own top-level domain, and they cannot be standalone applications. It should be noted that all these problems can be resolved. For the web, a custom chromium-based browser could be built with an Intertext client built-in to it. And as in the previous example, when users visits \textit{example.com} it would detect IUIDL code received by the web server and it would render it through the built-in Intertext client. For mobile and desktop platforms, custom operating systems can be built (possibly based on Android for mobile, and based on Linux for desktop) with an Intertext client built into it, which can support Intertext applications natively without the need for a wrapper application. Intertext support can also be built in to existing browsers and operating systems as well.
     
 \end{enumerate}
 
@@ -114,6 +114,6 @@ Intertext project is a work in progress. At the time of the thesis, we only impl
     
     \item \textbf{Cross-origin requests}: Intertext clients do not allow cross-origin requests. That is, an application served from an endpoint can only make requests to the same endpoint it is served from. However there are some cases that requires requests outside; for instance loading images, videos, resources from CDN servers, embedding content and so on. To enable this, we plan to allow outside requests once the permission is granted by the user. Also for transparency, we plan to create an interface that displays the request history logs to allow users to investigate the data flow.
     
-    \item \textbf{Cross-origin storage read}: Intertext clients by default do not allow applications to read what other applications stored. While this is important to ensure privacy, this can also be used in a good way to enhance user experience. For instance, if a user was logged in at \texttt{example.com}, application served at \texttt{blog.example.com} might want to read the stored user token in order to carry out the session. Therefor, we plan to create a permission flow that asks permission from the users for the read request.
+    \item \textbf{Cross-origin storage read}: Intertext clients by default do not allow applications to read what other applications stored. While this is important to ensure privacy, this can also be used in a good way to enhance user experience. For instance, if a user was logged in at \texttt{example.com}, application served at \texttt{blog.example.com} might want to read the stored user token in order to carry out the session. Therefore, we plan to create a permission flow that asks permission from the users for the read request.
     
 \end{enumerate}
